--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <p class="text-muted">
-      &copy; Copyright 2015
+      Copyright 2015 &nbsp; &hearts; &nbsp; Flatiron School
     </p>
   </div>
 </footer>
