--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -5,53 +5,8 @@
 </script>
 
   <div class="map">
-  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="960" height="593">
-
-    <style type="text/css">
-    .state
-    {
-    	fill:#F7FBFF;
-    	stroke:#08306B;
-    	stroke-width:1;
-    	stroke-opacity:1;
-    }
-
-    .territory
-    {
-    	opacity:0;
-    	fill:#F7FBFF;
-    	stroke:#08306B;
-    	stroke-width:1;
-    	stroke-opacity:1;
-    }
-
-    .territoryborder
-    {
-    	opacity:0;
-    	fill:none;
-    	stroke:#A9A9A9;
-    	stroke-width:2;
-    }
-
-    .border
-    {
-    	opacity:1;
-    	fill:none;
-    	stroke:#A9A9A9;
-    	stroke-width:2;
-    }
-
-    .circle
-    {
-       opacity:1;
-       fill:#F7FBFF;
-       stroke:#08306B;
-       stroke-width:1;
-    }
-
-    </style>
 
     <g id="fl">
     	<title>Florida</title>
@@ -140,20 +95,18 @@
 
   <script>
     function buildMap(map_data) {
+      var state = d3.selectAll('div.map path').attr('fill', function(d){
+        var abbr = this.id;
+        var state_review = 0;
 
-    var state = d3.selectAll('path').attr('fill', function(d){
-
-      var abbr = this.id;
-      var state_review = 0;
-
-      $.each(map_data, function(key, data){
-        if(key == abbr){
-          console.log(`matched at ${abbr}`);
-          state_review = data;
-          console.log(`rating is ${state_review}`);
-          $(`#${abbr}`).css('fill', `rgba(8,48,107,${state_review})`);
-        }
+        $.each(map_data, function(key, data){
+          if(key == abbr){
+            console.log(`matched at ${abbr}`);
+            state_review = data;
+            console.log(`rating is ${state_review}`);
+            $(`#${abbr}`).css('fill', `rgba(8,48,107,${state_review})`);
+          }
+        });
       });
-    });
     }
   </script>
