--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -30,17 +30,13 @@ body
   color: #444
 
 body#homepage
-  // background: url('https://images.unsplash.com/uploads/14131528357928cb9c5b5/220ec369?q=80&fm=jpg&s=116c62656b83d67a67c63bc473b0f288') no-repeat center center fixed
-  // -webkit-background-size: cover
-  // -moz-background-size: cover
-  // -o-background-size: cover
-  // background-size: cover
+  background: url('https://images.unsplash.com/photo-1428452932365-4e7e1c4b0987?q=80&fm=jpg&s=65ec6a6b5ce90c1448e0760e0eb2d467') no-repeat center center fixed
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
   // https://images.unsplash.com/uploads/1413395496082cbc91228/43e39040?q=80&fm=jpg&s=ef4acb9f201cc553006a568c8b616165
-
   // https://images.unsplash.com/36/X7L5hgFXQZazzPaK3goC_14084990857_88cabf3b6d_o.jpg?q=80&fm=jpg&s=24483760876f49ba7ed460c10807f555
-
-  // https://images.unsplash.com/uploads/14131528357928cb9c5b5/220ec369?q=80&fm=jpg&s=116c62656b83d67a67c63bc473b0f288
-  // https://images.unsplash.com/photo-1428452932365-4e7e1c4b0987?q=80&fm=jpg&s=65ec6a6b5ce90c1448e0760e0eb2d467
 
 h1
   font-weight: 100
